force-app/main/default/objects/CommSubscriptionConsent/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communication Subscription Consents</relationshipLabel>
    <relationshipName>Communication_Subscription_Consents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>