force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Cancer_Support__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Cancer_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Cancer Support</label>
    <type>Checkbox</type>
</CustomField>