force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Convoy_Geelong__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Convoy_Geelong__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Convoy Geelong</label>
    <type>Checkbox</type>
</CustomField>