force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Convoy_Perth__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Convoy_Perth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Convoy Perth</label>
    <type>Checkbox</type>
</CustomField>