force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Escarpade__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Escarpade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Escarpade</label>
    <type>Checkbox</type>
</CustomField>