force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Funx4__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Funx4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Funx4</label>
    <type>Checkbox</type>
</CustomField>