force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Motocyc__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Motocyc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Motocyc</label>
    <type>Checkbox</type>
</CustomField>