force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Motoring_Events__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Motoring_Events__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Motoring Events</label>
    <type>Checkbox</type>
</CustomField>