force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Physical_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Physical_Challenges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Physical Challenges</label>
    <type>Checkbox</type>
</CustomField>