force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_Schools__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_Schools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference Schools</label>
    <type>Checkbox</type>
</CustomField>