force-app/main/default/objects/CommSubscriptionConsent/fields/Email_Preference_The_Giggle__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_The_Giggle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Preference The Giggle</label>
    <type>Checkbox</type>
</CustomField>